Adding some functions to axis setup and changed start setup also added a bunch of functionallity to annolag dialog

--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -15,9 +15,9 @@ bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1440 737)
+size=@Size(1357 663)
 sns_axesfacecolor=1
-sns_c_palette=tab10
+sns_c_palette=spring
 sns_context=notebook
 sns_figfacecolor=1
 sns_font=Arial
