--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -3,21 +3,21 @@ CF_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
 DATA_PATH=/Users/austincano/Desktop/Project/Data
 FIG_PATH=/Users/austincano/Desktop/Project/Graphs
-FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
-PROJECT_PATH=/Users/austincano/Desktop/Reactions
+FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2020-11/2020-11-09
+PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-08
 QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/QCM
 SAVED_DATA_PATH=/Users/austincano/Desktop/Project/Saved
 SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE/2021-01
-XPS_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XPS
+XPS_PATH=/Users/austincano/Desktop
 XRD_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XRR_XRD
 app_style=DarkFusion
 bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1357 663)
+size=@Size(1379 802)
 sns_axesfacecolor=1
-sns_c_palette=spring
+sns_c_palette=tab20b
 sns_context=notebook
 sns_figfacecolor=1
 sns_font=Arial
