Added new spanSelector to FTIr section to deal with integration. Want to add this to QCM with pressure integration

--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -2,9 +2,9 @@
 CF_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
 DATA_PATH=/Users/austincano/Desktop/Project/Data
-FIG_PATH=/Users/austincano/Desktop/Project/Graphs
-FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2020-11/2020-11-09
-PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-08
+FIG_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-10
+FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-08
+PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
 QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/QCM
 SAVED_DATA_PATH=/Users/austincano/Desktop/Project/Saved
 SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE/2021-01
@@ -15,7 +15,7 @@ bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1379 802)
+size=@Size(1074 578)
 sns_axesfacecolor=1
 sns_c_palette=tab20b
 sns_context=notebook
