--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -3,19 +3,19 @@ CF_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
 DATA_PATH=/Users/austincano/Desktop/Project/Data
 FIG_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-10
-FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-08
-PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
-QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/QCM
+FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
+PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
+QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/Pressure_Readings
 SAVED_DATA_PATH=/Users/austincano/Desktop/Project/Saved
-SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE/2021-01
-XPS_PATH=/Users/austincano/Desktop
+SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
+XPS_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XPS
 XRD_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XRR_XRD
 app_style=DarkFusion
 bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1074 578)
+size=@Size(1285 753)
 sns_axesfacecolor=1
 sns_c_palette=tab20b
 sns_context=notebook
