From Dell, dw_FITR.ui and kinda just a test of pushing from the dell

--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -1,15 +1,15 @@
 [General]
-CF_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)
+CF_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
-DATA_PATH=/Users/austincano/Desktop/Project/Data
-FIG_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR/2019/2019-10
-FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
-PROJECT_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
-QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/Pressure_Readings
-SAVED_DATA_PATH=/Users/austincano/Desktop/Project/Saved
+DATA_PATH=C:/Users/austi/Desktop\\Project_0\\Data
+FIG_PATH=C:/Users/austi/Desktop/Project_0
+FTIR_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/FTIR
+PROJECT_PATH=C:/Users/austi/Desktop\\Project_0
+QCM_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/QCM
+SAVED_DATA_PATH=C:/Users/austi/Desktop\\Project_0\\Saved
 SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
-XPS_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XPS
-XRD_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XRR_XRD
+XPS_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XPS
+XRD_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XRR_XRD
 app_style=DarkFusion
 bottom_spine_color=black
 left_spine_color=black
