--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -7,7 +7,7 @@ FTIR_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/FTIR
 PROJECT_PATH=C:/Users/austi/Desktop\\Project_0
 QCM_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/QCM
 SAVED_DATA_PATH=C:/Users/austi/Desktop\\Project_0\\Saved
-SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
+SE_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/SE
 XPS_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XPS
 XRD_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XRR_XRD
 app_style=DarkFusion
@@ -15,7 +15,7 @@ bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1285 753)
+size=@Size(1506 761)
 sns_axesfacecolor=1
 sns_c_palette=tab20b
 sns_context=notebook
