ok lots of things im going to push here. Big work on the loading and saving of figure objects with pickle. big updates to annotation with a new draggable workaroud. Need to work on dragable legend cause it causes the figure to become a FigureCanvas object somehow. Small changes to add v and h line

--- a/src/Resources/settings.ini
+++ b/src/Resources/settings.ini
@@ -1,21 +1,21 @@
 [General]
-CF_PATH=
+CF_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
-DATA_PATH=/Users/austincano/Desktop/New_Pro/Data
-FIG_PATH=/Users/austincano/Desktop/New_Pro/Graphs
-FTIR_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/FTIR
-PROJECT_PATH=/Users/austincano/Desktop/New_Pro
-QCM_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/Pressure_Readings
-SAVED_DATA_PATH=/Users/austincano/Desktop/New_Pro/Saved
-SE_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/SE
-XPS_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XPS
-XRD_PATH=/Users/austincano/Google Drive (auca0625@colorado.edu)/XRR_XRD
+DATA_PATH=C:/Users/austi/Desktop\\New_Projecty\\Data
+FIG_PATH=C:/Users/austi/Desktop/New_Projecty/Saved
+FTIR_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/FTIR
+PROJECT_PATH=C:/Users/austi/Desktop\\New_Projecty
+QCM_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/QCM
+SAVED_DATA_PATH=C:/Users/austi/Desktop\\New_Projecty\\Saved
+SE_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/SE
+XPS_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XPS
+XRD_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XRR_XRD
 app_style=DarkFusion
 bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1330 771)
+size=@Size(1333 755)
 sns_axesfacecolor=1
 sns_c_palette=tab20b
 sns_context=notebook
