Changing a lot but most importantly the root content. putting back in some functions i had to remove

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,12 +1,12 @@
 [General]
 CF_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)
 DATABROWSER_PATH=/Users/austincano/Desktop/
-DATA_PATH=C:/Users/austi/Desktop\\New_Projecty\\Data
-FIG_PATH=C:/Users/austi/Desktop/New_Projecty/Saved
+DATA_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/AlN_Al2O3_GGG_Project/Data
+FIG_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/AlN_Al2O3_GGG_Project/Graphs
 FTIR_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/FTIR
-PROJECT_PATH=C:/Users/austi/Desktop\\New_Projecty
-QCM_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/QCM
-SAVED_DATA_PATH=C:/Users/austi/Desktop\\New_Projecty\\Saved
+PROJECT_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/AlN_Al2O3_GGG_Project
+QCM_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/Pressure_Readings
+SAVED_DATA_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/AlN_Al2O3_GGG_Project/Saved (1)
 SE_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/SE
 XPS_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XPS
 XRD_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XRR_XRD
@@ -15,7 +15,7 @@ bottom_spine_color=black
 left_spine_color=black
 pos=@Point(-1995 315)
 right_spine_color=black
-size=@Size(1333 755)
+size=@Size(1248 776)
 sns_axesfacecolor=1
 sns_c_palette=tab20b
 sns_context=notebook
