oh lots of stuff... dunno eve know what to say

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -10,6 +10,7 @@ SAVED_DATA_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/AlN_Al2O3_GG
 SE_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/SE
 XPS_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XPS
 XRD_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/XRR_XRD
+CF_PATH=C:/Users/austi/Google Drive (auca0625@colorado.edu)/QMS
 app_style=DarkFusion
 bottom_spine_color=black
 left_spine_color=black
